--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "yii2",
     "extension"
   ],
-  "license": "GPL-3.0",
+  "license": "GPL-3.0-only",
   "authors": [
     {
       "name": "scriptua",
